<resources>
    <string name="app_name">WhatsappClone</string>

    <string name="login_description_whatsappLogo">Whatsapp Logo</string>
    <string name="login_text_welcome">Welcome to a Whatsapp Clone</string>
    <string name="login_hint_name">Name</string>
    <string name="login_hint_countryCode">Country Code</string>
    <string name="login_hint_phoneNumber">Area Code + Phone Nº</string>

    <string name="validation_text_minorTitle">Validation</string>
    <string name="validation_text_guideMessage">You received a SMS to validate your phone number, insert the received code below</string>
    <string name="validation_button_validate">Validate Code</string>
    <string name="login_button_register">Register</string>
    <string name="login_button_signIn">Sign In</string>
    <string name="login_button_signUp">Sign Up</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_link_toSignUp">Doesn\'t have an account? Sign Up</string>
    <string name="login_link_toPhoneLogin">Want to register by your phone number? Tap here!</string>
    <string name="login_link_toEmailLogin">Want to login or sign up using your email? Tap here!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_empty" />
</resources>