<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/login_horizontalPadding"
    android:id="@+id/main_view"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:id="@+id/headerBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginVertical="@dimen/login_header_verticalMargin"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_logo_whatsapp"
            app:tint="@color/onPrimary"
            android:layout_marginVertical="@dimen/login_logo_verticalMargin"
            android:contentDescription="@string/login_description_whatsappLogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/onPrimary"
            android:text="@string/login_text_welcome"
            android:gravity="center_horizontal"
            style="@style/TitleStyle"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="@dimen/login_header_verticalMargin"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="12dp"
            android:weightSum="8"
            android:baselineAligned="false"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginEnd="8dp"
                app:prefixText="+"
                android:hint="@string/login_hint_countryCode">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/country_code_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number"
                    android:digits="0123456789"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginStart="8dp"
                android:hint="@string/login_hint_phoneNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="phone"
                    android:digits="0123456789"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button_signUp"
            android:textSize="16sp"
            style="@style/TextButtonOnPrimary"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:id="@+id/to_login_email_pass_link"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/onPrimary"
            android:text="@string/login_link_toEmailLogin"
            android:layout_marginVertical="8dp"
            android:textSize="16sp"
            />
    </LinearLayout>

</LinearLayout>