<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:paddingHorizontal="@dimen/login_horizontalPadding"
    android:orientation="vertical"
    tools:context=".activities.ValidationActivity">

    <LinearLayout
        android:id="@+id/headerBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginVertical="@dimen/login_header_verticalMargin"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_logo_whatsapp"
            app:tint="@color/onPrimary"
            android:layout_marginVertical="@dimen/login_logo_verticalMargin"
            android:contentDescription="@string/login_description_whatsappLogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/onPrimary"
            android:text="@string/validation_text_minorTitle"
            android:gravity="center_horizontal"
            style="@style/MinorTitleStyle"
            android:layout_marginBottom="12dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/onPrimary"
            android:text="@string/validation_text_guideMessage"
            android:textAlignment="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginVertical="@dimen/login_header_verticalMargin"
        android:weightSum="1"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="0.5"
            android:hint="@string/validation_button_validate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/validation_code_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="phone"
                android:digits="0123456789 "
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <Button
            android:id="@+id/validate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validation_button_validate"
            android:textSize="16sp"
            style="@style/TextButtonOnPrimary"
            />
    </LinearLayout>

</LinearLayout>